# beatboxx

./: .gitignore  .gitmodules  CMakeLists.txt  bbxx.sh  vcpkg.json
assets/shaders/: chess.frag  cube.frag  cube.vert  lygiatest.frag  march.frag  march.vert  msdf.frag  msdf.vert  sdf.frag  shadertoy.frag  shadertoy.vert  triangle.frag  triangle.vert  triangle_christmas.frag  triangle_hexagon.frag
assets/tracks/: hi-posi.pacemaker  kaede.pacemaker  lamp.pacemaker
glad/include/glad/: glad.h
glad/src/: glad.c
src/: AudioState.h  FPSCounter.h  GLState.h  ImguiState.h  InputState.h  KeyDisplay.h  MSDFState.h  Miku.h  NanoVGState.cpp  Pace.h  PaceMaker.h  RenderState.h  ShaderProgram.h  SongSelect.h  TextRender.h  Track.h  Util.h  WindowState.h  bbxx.cpp  bbxx.h  main.cpp  utilities.h
src/bbxx/: AudioState.h  BBXX.cpp  BBXX.h  GLState.h  ImguiState.h  MSDFState.h  Miku.h  NanoVGState.cpp  NanoVGState.h  Pace.h  ShaderProgram.h  Track.h  WindowState.h  utilities.h
src/bbxx/screen/: Screen.h
